--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <ul class="space-y-2 text-slate-700">
           <li>• 10 Exames laboratoriais específicos gratuitos (uso ilimitado)</li>
           <li>• Limpeza odontológica gratuita</li>
-          <li>• Pronto Socorro 24 horas - atendimento médico a qualquer momento</li>
+          <li>• Pronto socorro 24 horas</li>
           <li>• Ativação rápida: até <strong>48 horas</strong></li>
           <li>• Hospital próprio para mais segurança</li>
         </ul>
